Changement versions librairies + Correction TU.
svn path=/java/branches/merge-migrationCQL-hawaiv6/; revision=7026